<resources>
    <string name="app_name">Youtiao</string>

    <string name="title_activity_login">Youtiao</string>
    <string name="title_activity_register">Youtiao</string>
    <string name="title_activity_bulletin_detail">Bulletin</string>
    <string name="title_activity_group_detail">Group</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="title_activity_bootstrap">Bootstrap</string>
    <string name="title_activity_join_group">Join Group</string>
    <string name="title_activity_group_profile">Group Settings</string>
    <string name="title_activity_group_member">Members</string>
    <string name="title_activity_group_code">Group Code</string>
    <string name="title_activity_group_member_profile">Member Profile</string>
    <string name="title_activity_new_bulletin">New Bulletin</string>
    <string name="title_activity_select_send_group">Send to...</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_group_edit">Group</string>
    <string name="title_activity_joined_group_profile">Group Profile</string>
    <string name="title_activity_edit_group_name">Group Name</string>
    <string name="title_activity_edit_group_code">Group Code</string>
    <string name="title_activity_edit_account_name">Name</string>
    <string name="title_activity_change_password">Password</string>
    <string name="title_activity_feedback">Feedback</string>


    <string name="bulletin">Bulletin</string>
    <string name="bulletins">Bulletins</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="subscriber">Subscriber</string>
    <string name="subscribers">Subscribers</string>
    <string name="stamp">Stamp</string>
    <string name="stamps">Stamps</string>


    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_create">Create</string>
    <string name="action_join">Join</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>


    <string name="bulletin_check">check</string>
    <string name="bulletin_cross">cross</string>
    <string name="bulletin_comment">bulletin comment</string>
    <string name="bulletin_stamp">bulletin stamp</string>
    <string name="bulletin_receiver">Send To:</string>
    <string name="my_groups">My Groups</string>
    <string name="joined_groups">Joined Groups</string>

    <string name="role_owner">Owner</string>
    <string name="role_admin">Admin</string>
    <string name="role_member">Member</string>


    <string name="tip_unsubscribe_group">Are you sure you want to unsubscribe from this group</string>
    <string name="tip_sign_out">Are you sure you want to sign out?</string>
    <string name="tip_delete_group">Are you sure you want to delete this group?</string>
    <string name="tip_promote">Are you sure you want to promote this user</string>
    <string name="tip_demote">Are you sure you want to demote this user</string>
    <string name="tip_btn_yes">Yes</string>
    <string name="tip_btn_ok">Ok</string>
    <string name="tip_btn_cancel">Cancel</string>
    <string name="hint_type_bulletin_content">Type a message</string>
    <string name="hint_enter_group_name">Click and select group name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_name">Full name</string>
    <string name="hint_group_name">Group name</string>
    <string name="hint_group_code">Group code</string>
    <string name="hint_pick_account_name">Pick a name easy to remember</string>
    <string name="hint_pick_group_name">Pick a name easy to remember</string>
    <string name="hint_pick_group_code">Pick a code easy to remember</string>
    <string name="progress_message_change_password">Change Password ...</string>
    <string name="progress_message_save">Save ...</string>
    <string name="progress_message_sign_in">Log in ...</string>
    <string name="progress_message_sing_up">Sign up ...</string>
    <string name="progress_message_create">Create ...</string>
    <string name="progress_message_join">Join ...</string>


    <string name="label_group_name">Group Name</string>
    <string name="label_group_code">Group Code</string>
    <string name="label_group_members">Members</string>
    <string name="label_email">Email</string>
    <string name="label_account">Account</string>
    <string name="label_password">Password</string>
    <string name="label_current_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_name">Name</string>
    <string name="label_qq">QQ</string>
    <string name="label_version">Version</string>
    <string name="label_feedback">Feedback</string>
    <string name="btn_sign_in">Log In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_change_password">Password</string>
    <string name="btn_delete_group">Delete Group</string>
    <string name="btn_unsubscribe_group">Unsubscribe from this Group</string>
    <string name="btn_unsubscribe_user">Unsubscribe this user</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_join">Join</string>
    <string name="btn_add">Add</string>
    <string name="btn_create">Create</string>
    <string name="btn_done">Done</string>
    <string name="btn_create_group">Create a Group</string>
    <string name="btn_join_group">Join a Group</string>
    <string name="btn_promote">Set as admin</string>
    <string name="btn_demote">Cancel admin</string>

    <string name="several_days_ago">%d days ago</string>
    <string name="in_several_days">in %d days</string>
    <string name="several_hours_ago">%d hours ago</string>
    <string name="in_several_hours">in %d hours</string>
    <string name="several_minutes_ago">%d minutes ago</string>
    <string name="in_several_minutes">in %d minutes</string>
    <string name="several_seconds_ago">%d seconds ago</string>
    <string name="in_several_seconds">in %d seconds</string>
    <string name="a_few_second_ago">a few second ago</string>
    <string name="in_a_few_second">in a few second</string>
    <string name="in_one_hour">in 1 hour</string>
    <string name="in_one_minute">in 1 minute</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="yesterday">yesterday</string>
    <string name="tomorrow">tomorrow</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="welcome">Born to Notify</string>
    <string name="feedback_email">feng.ye@youtiao.im</string>
    <string name="feedback_qq">138578696</string>

    <string name="stamp_by_myself">you</string>

</resources>
