<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="im.youtiao.android_client.ui.activity.LoginActivity">



            <LinearLayout
                style="@style/layout_section"
                android:layout_alignParentTop="true"
                android:id="@+id/layout_section1"
                android:layout_marginTop="20dp">

                <LinearLayout style="@style/layout_row"
                    android:id="@+id/layout_email">

                    <EditText style="@style/font_row_text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_email_address"
                        android:id="@+id/edtTxt_email"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_alignParentRight="false"
                        android:layout_toRightOf="@+id/tv_email_label"/>
                </LinearLayout>

                <View  style="@style/bg_line"/>

                <LinearLayout style="@style/layout_row"
                    android:id="@+id/layout_password">

                    <EditText style="@style/font_row_text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_password"
                        android:id="@+id/edtTxt_password"
                        android:background="@null"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/btn_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_alignParentRight="false"
                        android:layout_toRightOf="@+id/tv_password_label" />
                </LinearLayout>

                <View  style="@style/bg_line"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_forgot_password"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_light"
                android:layout_below="@+id/layout_section1"
                android:layout_centerInParent="true" />

</RelativeLayout>

