<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/layout_section"
        android:layout_alignParentTop="true"
        android:id="@+id/layout_section1"
        android:layout_marginTop="20dp">

        <RelativeLayout style="@style/layout_row"
            android:id="@+id/layout_user_name">

            <TextView style="@style/layout_row_label"
                android:text="@string/label_name"
                android:id="@+id/tv_user_name_label"
                android:layout_alignParentLeft="true" />

            <TextView style="@style/layout_row_text"
                android:id="@+id/tv_user_name"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View  style="@style/bg_line"/>

        <RelativeLayout style="@style/layout_row"
            android:id="@+id/layout_group_code">
            <TextView style="@style/layout_row_label"
                android:text="@string/label_email"
                android:id="@+id/tv_user_email_label"
                android:layout_alignParentLeft="true" />
            <TextView style="@style/layout_row_text"
                android:id="@+id/tv_user_email"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/layout_section"
        android:layout_alignParentTop="false"
        android:id="@+id/layout_section2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_section1">

        <RelativeLayout style="@style/layout_row"
            android:id="@+id/layout_unsubscribe_user">
            <TextView style="@style/layout_row_text"
                android:id="@+id/tv_delete_user"
                android:text="@string/btn_unsubscribe_user"
                android:layout_centerInParent="true"
                android:textColor="@android:color/holo_red_light"/>
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
