<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="im.youtiao.android_client.ui.activity.LoginActivity"
    android:background="@android:color/white">


    <LinearLayout
        android:id="@+id/password_change_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layout_section"
            android:id="@+id/layout_section1"
            android:layout_marginTop="20dp">

            <LinearLayout style="@style/layout_row"
                android:id="@+id/layout_old_password">

                <EditText style="@style/font_row_text"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:hint="@string/hint_old_password"
                    android:id="@+id/edtTxt_old_password"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_alignParentRight="false"
                    android:layout_toRightOf="@+id/tv_current_password_label" />
            </LinearLayout>

            <View  style="@style/bg_line"/>

            <LinearLayout style="@style/layout_row"
                android:id="@+id/layout_new_password">

                <EditText style="@style/font_row_text"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:hint="@string/hint_new_password"
                    android:id="@+id/edtTxt_new_password"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_alignParentRight="false"
                    android:layout_toRightOf="@+id/tv_old_password_label" />
            </LinearLayout>

            <View  style="@style/bg_line"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_confirm"
            android:textStyle="bold"
            android:background="@android:color/holo_green_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <!-- Login progress -->

</RelativeLayout>

